<resources>
    <string name="app_name">UserCenter</string>
    <string name="forget_pwd">Forget</string>
    <string name="input_phone_num">Please input your number</string>
    <string name="send_code">send code</string>
    <string name="input_code">input code</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="input_pwd">Input password</string>
    <string name="input_pwd_again">input your password again</string>
    <string name="reset_pwd">reset password</string>
    <string name="avatar">Avatar</string>
    <string name="personal_info">Personal Info</string>
    <string name="nickname">nickname</string>
    <string name="call_me">My name is...</string>
    <string name="gender">gender</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="Phone">Phone</string>
    <string name="sign">sign</string>
    <string name="sign_your_name">Please sign your name</string>
</resources>
