<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              style="@style/MatchMatch.Vertical.Common">
    <com.kotlin.base.widgets.HeaderBar android:id="@+id/mHeaderBar"
                                       app:titleText="注册"
                                       style="@style/MatchWrap"/>
    <LinearLayout android:background="@drawable/border_corner_all"
                  android:layout_margin="@dimen/common_margin"
                  style="@style/MatchWrap.Vertical">
        <LinearLayout style="@style/MatchWrap.Horizontal">
            <EditText android:id="@+id/mMobileEt"
                      android:background="@null"
                      android:paddingLeft="@dimen/common_padding_small"
                      android:layout_width="0dp"
                      android:layout_height="@dimen/common_line_height"
                      android:hint="@string/input_phone_num"
                      android:drawableLeft="@drawable/icon_phone"
                      android:drawablePadding="@dimen/common_padding_small"
                      android:layout_weight="1.0"
                      android:inputType="phone"/>
            <View style="@style/DividerFixedWidth.MarginTopBottom"/>
            <com.kotlin.base.widgets.VerifyButton
                    android:id="@+id/mVerifyCodeBtn"
                    style="@style/WrapMatch"
                    android:textColor="@color/common_blue"
                    android:background="@null"
                    android:text="@string/send_code"/>
        </LinearLayout>
        <View style="@style/DividerFixedHeight"/>
        <EditText android:id="@+id/mVerifyCodeEt"
                  android:background="@null"
                  android:paddingLeft="@dimen/common_padding_small"
                  android:layout_width="match_parent"
                  android:layout_height="@dimen/common_line_height"
                  android:hint="@string/input_code"
                  android:drawableLeft="@drawable/icon_verify_code"
                  android:drawablePadding="@dimen/common_padding_small"
                  android:inputType="number"
        />
        <View style="@style/DividerFixedHeight"/>
        <EditText android:id="@+id/mPwdEt"
                  android:background="@null"
                  android:paddingLeft="@dimen/common_padding_small"
                  android:layout_width="match_parent"
                  android:layout_height="@dimen/common_line_height"
                  android:hint="@string/input_pwd"
                  android:drawableLeft="@drawable/icon_pwd"
                  android:drawablePadding="@dimen/common_padding_small"
                  android:inputType="textPassword"/>
        <View style="@style/DividerFixedHeight"/>
        <EditText android:id="@+id/mPwdConfirmEt"
                  android:background="@null"
                  android:paddingLeft="@dimen/common_padding_small"
                  android:layout_width="match_parent"
                  android:layout_height="@dimen/common_line_height"
                  android:hint="@string/input_pwd_again"
                  android:drawableLeft="@drawable/icon_pwd"
                  android:drawablePadding="@dimen/common_padding_small"
                  android:inputType="textPassword"/>
    </LinearLayout>
    <Button android:id="@+id/mRegisterBtn"
            style="@style/FullBtnStyle"
            android:text="@string/register"/>
</LinearLayout>
