<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              style="@style/MatchMatch.Vertical.Common">
    <com.kotlin.base.widgets.HeaderBar
            android:id="@+id/mHeaderBar"
            style="@style/MatchWrap"
            app:titleText="@string/reset_pwd"/>
    <LinearLayout
            style="@style/MatchWrap.Vertical"
            android:background="@drawable/border_corner_all"
            android:layout_margin="@dimen/common_margin">
        <EditText android:id="@+id/mPwdEt"
                  android:layout_width="match_parent"
                  android:layout_height="@dimen/common_line_height"
                  android:background="@null"
                  android:paddingLeft="@dimen/common_padding_small"
                  android:hint="@string/input_pwd"
                  android:drawableLeft="@drawable/icon_pwd"
                  android:drawablePadding="@dimen/common_padding_small"
                  android:inputType="textPassword"/>
        <View style="@style/DividerFixedHeight"/>
        <EditText android:id="@+id/mPwdConfirmEt"
                  android:layout_width="match_parent"
                  android:layout_height="@dimen/common_line_height"
                  android:background="@null"
                  android:hint="@string/input_pwd_again"
                  android:drawableLeft="@drawable/icon_pwd"
                  android:drawablePadding="@dimen/common_padding_small"
                  android:inputType="textPassword"/>
    </LinearLayout>
    <Button
            android:id="@+id/mConfirmBtn"
            style="@style/FullBtnStyle"
            android:text="@string/common_confirm"/>
</LinearLayout>
